# docker-genai

./: .env.example  LICENSE  README.md  docker-compose.yml
docker-bot/: Dockerfile  pyproject.toml
docker-bot/docker_bot/: bot.py
docker-bot/scripts/: run_locally.sh  run_with_docker.sh
yt-whisper/: Dockerfile  pyproject.toml
yt-whisper/scripts/: run_locally.sh  run_with_docker.sh
yt-whisper/yt_whisper/: app.py  vtt_utils.py
