[tool.poetry]
name = "docker-bot"
version = "0.1.0"
description = ""
authors = ["David Cardozo <david@updata.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
pinecone-client = "^2.2.4"
python-dotenv = "^1.0.0"
openai = "^1.7.0"
langchain = "^0.1.0"
langchain-community = "^0.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
